// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonLink no user account 1`] = `
<DocumentFragment>
  <span
    class="a"
    data-state="closed"
  >
    alice
  </span>
</DocumentFragment>
`;

exports[`PersonLink with user account 1`] = `
<DocumentFragment>
  <a
    class="a b"
    data-state="closed"
    href="u"
  >
    alice
  </a>
</DocumentFragment>
`;
